# EnvarManager

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: publish.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs  utils.rs
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  EnvList.svelte  Header.svelte  styles.css
