[package]
name = "app"
version = "0.1.1"
description = "Envar Manager Core"
authors = ["soeur"]
license = "MIT"
repository = "https://github.com/juzi5201314/EnvarManager"
default-run = "app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }
tauri-utils = "1.3.0"
serde_json = "1.0"

[dependencies]
anyhow = "1.0.71"
winreg = "0.50.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["devtools", "windows7-compat"] }
winapi = { version = "0.3.9", features = ["handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default"] }
open = "4.1.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = false
strip = true
opt-level = 3
